fiexed minor ui issue on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,6 +44,10 @@
   --toastify-color-success: #07bc0c;
   --toastify-color-warning: #f1c40f;
   --toastify-color-error: #e74c3c; */
+  height: 100vh;
+  height: 100dvh;
+  width: 100vw;
+  /* height: --webkit-fill-available; */
 }
 
 #root {
